syntax = "proto3";

package protos;

// https://blog.csdn.net/neve_give_up_dan/article/details/126920398
// protoc --go_out=. --go-grpc_out=. test.proto
// protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative test.proto
option go_package="../protos";

service OpenaiService {
  rpc StreamChatCompletion (StreamChatCompletionRequest) returns (stream StreamChatCompletionResponse) {}
}

message Message {
  string role  = 1;
  string content = 2;
}

message StreamChatCompletionRequest {
  // @optional
  string token = 1; // 可自定义访问ChatGPT的token
  repeated Message message = 3;
}

message StreamChatCompletionResponse {
  string content = 1;
}

